# Gecko

./: .gitignore  INSTALL.md  README.md
SVF/: build.sh  pathlogging.sh
SVF/include/Util/: config.h
SVF/tools/: CMakeLists.txt
SVF/tools/Rain/: CMakeLists.txt  wpa_dda_rain.cpp
SVF/tools/Rain/dependency_analysis/: common.h  dependency_walker.cpp  dependency_walker.h  instrumenter_loger.cpp  instrumenter_loger.h  rain.cpp  rain.h
SVF/tools/Rain/dependency_analysis/dfi_lib/: compile_lib.sh  dfi_lib.c  your_bitcode.bc  your_bitcode.ll
SVF/tools/Rain/fake_dfi/: fake_dfi.cpp
SVF/tools/Rain/fake_dfi/dfi_lib/: dfi_lib.c  your_bitcode.bc
SVF/tools/Rain/idle_pass/: idle_pass.cpp  idle_pass.h
SVF/tools/Rain/path_logging/: path_logging.cpp  path_logging.h
SVF/tools/Rain/path_logging/link_lib/: compile_lib.sh  pathloglib.cpp  pathloglib.ll  pathloglin.ll
SVF/tools/Rain/path_sig/: path_sig.cpp  path_sig.h
SVF/tools/Rain/path_sig/link_lib/: compile_lib.sh  pathsiglib.cpp  pathsiglib.ll
SVF/tools/Rain/path_sig_and_sec_sen/: CMakeLists.txt  path_sig_and_sec_sen.h
SVF/tools/Rain/path_sig_and_sec_sen/wrong_df_link_lib/: libsecsen.cpp  libsecsen.ll
SVF/tools/Rain/profiling/: profiling.cpp  profiling.h
SVF/tools/Rain/profiling/link_lib/: compile_lib.sh  profilinglib.cpp  profilinglib.ll  sort_result.sh  substitue_id2_fn.py  substituted_file.txt
SVF/tools/Rain/profiling/link_lib/saved_data/: turtlebot_amcl.txt
SVF/tools/recovery_pass/: CMakeLists.txt
SVF/tools/recovery_pass/checkpointing/: CMakeLists.txt  PassCheckpointing.cpp
SVF/tools/recovery_pass/cmpt_analysis/: CMPTAnalysis.cpp  CMakeLists.txt
SVF/tools/recovery_pass/cmpt_enforce/: CMPTenforce.cpp  CMakeLists.txt  cmptenforce_backup.cpp
SVF/tools/recovery_pass/link_lib/: CMakeLists.txt  link_lib.cpp  link_lib.ll
checkpoint_restore/criu/: cr-restore.c  crtools.c
checkpoint_restore/criu/include/: crtools.h
compartment/: CMakeLists.txt
compartment/analysis/: CMakeLists.txt  HexboxAnalysis.cpp
compartment/policies/: cmpt.txt  task_cmpt.txt
compartment/scripts/: analyzer.py  devices.py  key_defs.py  ld_helpers.py
compartment/unknow/: path_sig_and_sec_sen.cpp
lib_llvmpass/: CMakeLists.txt  after_hexbox_info_clct.bc  build_pass.sh
lib_llvmpass/bp_compartment/: CMakeLists.txt  HexboxAnalysis.cpp
lib_llvmpass/bp_compartment/compartment/: HexboxAnalysis.cpp
lib_llvmpass/bp_compartment/compartment/link_lib/: compile_lib.sh
lib_llvmpass/bp_compartment/link_lib/: libsecsen.cpp  libsecsen.ll
lib_llvmpass/svf_pass/: CMakeLists.txt  build_svf_pass.sh
lib_llvmpass/svf_pass/cmpt_enforce/: CMakeLists.txt  HexboxApplication.cpp
lib_llvmpass/svf_pass/cmpt_enforce/link_lib/: helper.h  link_lib.cpp  link_lib.ll
link_lib/: compile_lib.sh  link_lib.cpp  link_lib.ll
outputs/: after.bc  analysis_result.json  md_output-link-script.ld
tests/: a.out  after.bc  after.ll  analysis_result.json  compartments_result.json  script_test.sh  svfir_initial.dot  test.bc  test.cpp  test.ll  test.s
